--- a/templates/activities2/barcelona.html.twig
+++ b/templates/activities2/barcelona.html.twig
@@ -24,7 +24,7 @@
       <img src="assets/IMG/esGuell.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 6 hrs and Valid for 1 day">Güell Parc</span></h5>
-        <p class="card-text">Explore one of Gaudí's legendary creations and admire a magnificent panorama of Barcelona.</p>
+        <p class="card-text">Explore one of Gaudí's legendary creations and admire a magnificent panorama of Barcelona, take a picture and selfie.</p>
       </div>
       <p class="xaliss">Price: 60€</p>
       <div class="card-footer">
@@ -37,7 +37,7 @@
       <img src="assets/IMG/esPicasso.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 3 hrs and Valid for 1 day">Picasso Museum of Barcelona</span></h5>
-        <p class="card-text">A museum dedicated to the life and work of Pablo Picasso, featuring an extensive collection.</p>
+        <p class="card-text">A museum dedicated to the life and work of Pablo Picasso, featuring an extensive collection, wonderful immersion to the master.</p>
       </div>
         <p class="xaliss">Price: 30€</p>
       <div class="card-footer">
@@ -50,7 +50,7 @@
       <img src="assets/IMG/esCN.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 1 hr and Valid for 1 day">Camp Nou Visit</span></h5>
-        <p class="card-text">Discover the history of Catalan's players and managers like Messi and Ronaldinho.</p>
+        <p class="card-text">Discover the history of Catalan's players and managers like Messi and Ronaldinho, Pep Guardiola, Xavi, and wonderful suporters.</p>
       </div>
         <p class="xaliss">Price: 120€</p>
       <div class="card-footer">
@@ -63,7 +63,7 @@
       <img src="assets/IMG/esKayak.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 2 hrs and Valid for 1 day">Kayak</span></h5>
-        <p class="card-text">Costa Brava Kayak, Snorkeling and Cliff Jumping with Lunch.</p>
+        <p class="card-text">Costa Brava Kayak, Snorkeling and Cliff Jumping with Lunch, you can lost your journey accross the blue azur river side.</p>
       </div>
       <p class="xaliss">Price: 40€</p>
       <div class="card-footer">
@@ -76,7 +76,7 @@
       <img src="assets/IMG/EsAqua.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 2 hrs and Valid for 1 day">Aquarium of Barcelona</span></h5>
-        <p class="card-text">The aquarium is known for its extensive collection of marine life from around the world.</p>
+        <p class="card-text">The aquarium is known for its extensive collection of marine life from around the world, you can see sharks, dolphins, shrimmps.</p>
       </div>
       <p class="xaliss">Price: 25€</p>
       <div class="card-footer">
@@ -89,7 +89,8 @@
       <img src="assets/IMG/esPaddle.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 1 hr and Valid for 1 day">Paddleboard</span></h5>
-        <p class="card-text">Paddleboard at sunrise with instructor and photos at Barceloneta Beach. </p>
+        <p class="card-text">Paddleboard at sunrise with instructor and photos at Barceloneta Beach.
+        Great and physical sport. Be ready to escape </p>
       </div>
       <p class="xaliss">Price: 70€</p>
       <div class="card-footer">
