--- a/templates/activities3/tokyo.html.twig
+++ b/templates/activities3/tokyo.html.twig
@@ -24,7 +24,7 @@
       <img src="assets/IMG/tkManga.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 1.5 hrs and Valid for 1 day">Manga's museum</span></h5>
-        <p class="card-text">The Studio Ghibli Museum, located in Mitaka, the museum focuses on the popular animation studio of Manga. </p>
+        <p class="card-text">The Studio Ghibli Museum, located in Mitaka, the museum focuses on the popular animation studio of Manga around the world. </p>
       </div>
       <p class="xaliss">Price: 35€</p>
       <div class="card-footer">
@@ -37,7 +37,7 @@
       <img src="assets/IMG/tkSumo.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 1 hr and Valid for 3 days">Ryogoku - Sumo's center</span></h5>
-        <p class="card-text">Learn the rules of sumo and how to practice it, watch demonstrations, then try wrestling yourself in Ryogoku.</p>
+        <p class="card-text">Learn the rules of sumo and how to practice it, watch demonstrations, then try wrestling yourself in Ryogoku at Tokyo.</p>
       </div>
       <p class="xaliss">Price: 80€</p>
       <div class="card-footer">
@@ -63,7 +63,7 @@
       <img src="assets/IMG/tkParcA.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><Span title="Duration 3 hrs and Valid for 1 day">Dome amusement park</Span></h5>
-        <p class="card-text">Day trip to Mount Fuji area, Oshino Hakkai and Lake Kawaguchi in the colorful Dome amusement park.</p>
+        <p class="card-text">Day trip to Mount Fuji area, Oshino Hakkai and Lake Kawaguchi in the colorful Dome amusement park, very enjoyfull place.</p>
       </div>
       <p class="xaliss">Price: 30€</p>
       <div class="card-footer">
@@ -89,7 +89,7 @@
       <img src="assets/IMG/tkOcean.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 8 hrs and Valid for 1 week">Mikurajima</span></h5>
-        <p class="card-text">Discover Mount Mikurajima on a full-day tour from Tokyo. Admire the grandeur of Japan's highest peak.</p>
+        <p class="card-text">Discover Mount Mikurajima on a full-day tour from Tokyo. Admire the grandeur of Japan's highest peak, awesome place you must see.</p>
       </div>
       <p class="xaliss">Price: 70€</p>
       <div class="card-footer">
