--- a/templates/activities4/bali.html.twig
+++ b/templates/activities4/bali.html.twig
@@ -50,7 +50,7 @@
       <img src="assets/IMG/blDolphin.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 2 hrs and Valid for 3 days">Lovina - Bali</span></h5>
-        <p class="card-text">Excursion to the north of Bali to see dolphins in their natural habitat, swim alongside them and go snorkeling in Lovina.</p>
+        <p class="card-text">Excursion to the north of Bali to see dolphins in their natural habitat, swim alongside them and go snorkeling in Lovina. beautithul landscape.</p>
       </div>
         <p class="xaliss">Price: 220€</p>
       <div class="card-footer">
@@ -76,7 +76,7 @@
       <img src="assets/IMG/blSwim.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 5 hrs and Valid for 1 week">Manta Point Snorkeling</span></h5>
-        <p class="card-text">Take a full-day tour from Nusa Penida, swim, snorkel and encounter the magnificent Manta Rays.</p>
+        <p class="card-text">Take a full-day tour from Nusa Penida, swim, snorkel and encounter the magnificent Manta Rays in the blue nature environnement.</p>
       </div>
       <p class="xaliss">Price: 325€</p>
       <div class="card-footer">
