--- a/templates/home_page/homePage.html.twig
+++ b/templates/home_page/homePage.html.twig
@@ -17,7 +17,7 @@
         <br>Make your vacation a fun, exciting, and unforgettable experience.</p>
     <br>
     
-    <button class="btnes">Discover now</button>
+    <a href="tokyovisit"><button class="btnes">Discover now</button></a>
 </div>
 
         </div>
@@ -40,7 +40,7 @@
                     </div>
                 </a>
                 <a href="helsinkivisit" class="card">
-                    <img class="card-img-top" src="assets/IMG/helsinki.jpg" alt="Card3">
+                    <img class="card-img-top" src="assets/IMG/hk2.jpg" alt="Card3">
                     <div class="card-body">
                         <h5 class="card-title">Helsinki, Finland</h5>
                         <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."</p>
