--- a/templates/mariahotel/mariahotel.html.twig
+++ b/templates/mariahotel/mariahotel.html.twig
@@ -21,7 +21,7 @@
 </lord-icon><span>Mariankatu 23, Kruununhaka, 00170 Helsinki, Finlande – Excellent emplacement – Proche du métro</span>
 <div class="contianer">
   <div class="item"><img src="assets/IMG/hotelMaria/HM1.jpg" alt="face hotel"></div>
-  <div class="item"><img src="assets/IMG/hotelMaria/HM3.jpg" alt="face hotel"></div>
+  <div class="item"><img src="assets/IMG/hotelMaria/HM3.jpg" alt="hall"></div>
   <div class="item"><img src="assets/IMG/hotelMaria/HM5.jpg" alt="inside hotel"></div>
   <div class="item"><img src="assets/IMG/hotelMaria/HM2.jpg" alt="inside hotel"></div>
   <div class="item"><img src="assets/IMG/hotelMaria/HM1.webp" alt="room"></div>
@@ -106,7 +106,7 @@
       <p>All bedrooms include a wardrobe. The private bathroom comes with a shower and free toiletries. Some rooms include a kitchen equipped with a refrigerator. The units are equipped with a flat-screen satellite TV and an iPad.</p>
       <p>The on-site restaurant serves local, international and European cuisine. Vegetarian, dairy-free and halal options are also available upon request.</p>
       <p>Popular points of interest near Hotel Maria - Preferred Hotels & Resorts include Helsinki Cathedral, Central Station and Music Center.</p>
-      <p>Couples particularly appreciate the location of this establishment. They give it a score of 9.3 for a stay for two.</p>
+      <p>Couples particularly appreciate the location of this establishment. They give it a score of <b>9.3</b> for a stay for two.</p>
       <span>The distances indicated in the description of the establishment are calculated with © OpenStreetMap.</span>
 
       <ul>
@@ -126,29 +126,29 @@
       <h1 class="xalis">Around the hotel</h1>
       <p class="text2">Activities</p>
       <ul>
-        <li><i class="tree"></i> Kaivopuisto Park  1km</li>
-        <li><i class="tree"></i> Suomenlinna Sea Fortress   500m</li>
-        <li><i class="tree"></i> National Museum of Finland     250m</li>
-        <li><i class="tree"></i> Design Museum   2.5km</li>
+        <li><i class="tree"></i> Kaivopuisto Park--1km</li>
+        <li><i class="tree"></i> Suomenlinna Sea Fortress--500m</li>
+        <li><i class="tree"></i> National Museum of Finland--250m</li>
+        <li><i class="tree"></i> Design Museum--2.5km</li>
       </ul>
       <p class="text2">Nearby places</p>
       <ul>
-        <li><i class="tree"></i> Old Church Park    700m</li>
-        <li><i class="tree"></i>Amos Rex Art Museum    300m</li>
-        <li><i class="tree"></i> Havis Amanda    600m</li>
-        <li><i class="tree"></i> Esplanade Park    300m</li>
+        <li><i class="tree"></i> Old Church Park--700m</li>
+        <li><i class="tree"></i>Amos Rex Art Museum--300m</li>
+        <li><i class="tree"></i> Havis Amanda-600m</li>
+        <li><i class="tree"></i> Esplanade Park--300m</li>
       </ul>
       <p class="text2">Restaurants and cafes</p>
       <ul>
-        <li><i class="tree"></i> Ravintola Viet Balo    20m</li>
-        <li><i class="tree"></i> Bar Cafe Wanzetta</li>
-        <li><i class="tree"></i> Bar Cafe Papu Cafe</li>
+        <li><i class="tree"></i> Ravintola Viet Balo--20m</li>
+        <li><i class="tree"></i> Bar Cafe Wanzetta--50m</li>
+        <li><i class="tree"></i> Bar Cafe Papu Cafe--120m</li>
       </ul>
       <p class="text2">Public transport</p>
       <ul>
-        <li><i class="tree"></i> University of Helsinki Metro Station</li>
-        <li><i class="tree"></i> Maisemajuna</li>
-        <li><i class="tree"></i> Hakaniemi Metro Station</li>
+        <li><i class="tree"></i> University of Helsinki Metro Station--1.2km</li>
+        <li><i class="tree"></i> Maisemajuna--2.3km</li>
+        <li><i class="tree"></i> Hakaniemi Metro Station--1.8km</li>
       </ul>
     </section>
   </div>
