--- a/templates/scandic/scandichotel.html.twig
+++ b/templates/scandic/scandichotel.html.twig
@@ -106,7 +106,7 @@
       <p>You will appreciate the 24-hour shop, the terrace and the bicycle and hiking pole rental service. </p>
       <p>The restaurant and bar offer city views. The buffet breakfast includes lactose- and gluten-free options.</p>
       <p>The Scandic Simonkenttä Hotel is an environmentally friendly hotel.</p>
-      <p>Couples particularly appreciate the location of this establishment. They give it a rating of 9.5 for a stay for
+      <p>Couples particularly appreciate the location of this establishment. They give it a rating of <b>9.5</b> for a stay for
         two.</p>
       <span>The distances indicated in the description of the establishment are calculated with © OpenStreetMap.</span>
 
