--- a/templates/valo/valo.html.twig
+++ b/templates/valo/valo.html.twig
@@ -104,7 +104,7 @@
       <p>All accommodation is equipped with a kettle. Featuring a private bathroom with a bidet and a hairdryer, all rooms at VALO Hotel & Work Helsinki include air conditioning and a flat-screen TV. Some rooms also have a seating area. Towels and bed linen are provided in all accommodation.</p>
       <p>Guests can enjoy a continental or buffet breakfast at the property.</p>
       <p>This hotel is 1.9 km from Hartwall Arena and 2.7 km from Bolt Arena Telia 5G Areena Football Stadium. The nearest airport is Helsinki-Vantaa Airport, 15.5 km from VALO Hotel & Work Helsinki.</p>
-      <p>Couples particularly appreciate the location of this establishment. They give it a rating of 8.0 for a stay for two.</p>
+      <p>Couples particularly appreciate the location of this establishment. They give it a rating of <b>8.0</b> for a stay for two.</p>
       <span>The distances indicated in the description of the establishment are calculated with © OpenStreetMap.</span>
 
       <ul>
@@ -124,29 +124,29 @@
       <h1 class="xalis">Around the hotel</h1>
       <p class="text2">Activities</p>
       <ul>
-        <li><i class="tree"></i> Heureka Science Center  1km</li>
-        <li><i class="tree"></i> Suomenlinna Sea Fortress   500m</li>
-        <li><i class="tree"></i> Kaivopuisto Park     250m</li>
-        <li><i class="tree"></i> Amos Rex Art Museum   2.5km</li>
+        <li><i class="tree"></i> Heureka Science Center--1km</li>
+        <li><i class="tree"></i> Suomenlinna Sea Fortress--500m</li>
+        <li><i class="tree"></i> Kaivopuisto Park--250m</li>
+        <li><i class="tree"></i> Amos Rex Art Museum--2.5km</li>
       </ul>
       <p class="text2">Nearby places</p>
       <ul>
-        <li><i class="tree"></i> Yhteiskoulunaukio   700m</li>
-        <li><i class="tree"></i>Munkinpuisto    300m</li>
-        <li><i class="tree"></i> Mätäjoen ruohokenttä    600m</li>
-        <li><i class="tree"></i> Mannerheim Statue, Helsinki    300m</li>
+        <li><i class="tree"></i> Yhteiskoulunaukio--700m</li>
+        <li><i class="tree"></i>Munkinpuisto--300m</li>
+        <li><i class="tree"></i> Mätäjoen ruohokenttä--600m</li>
+        <li><i class="tree"></i> Mannerheim Statue, Helsinki--300m</li>
       </ul>
       <p class="text2">Restaurants and cafes</p>
       <ul>
-        <li><i class="tree"></i> Suo    20m</li>
-        <li><i class="tree"></i> Bistro Elo</li>
-        <li><i class="tree"></i> Oivadeli Aitio</li>
+        <li><i class="tree"></i> Suo--20m</li>
+        <li><i class="tree"></i> Bistro Elo--210m</li>
+        <li><i class="tree"></i> Oivadeli Aitio--130m</li>
       </ul>
       <p class="text2">Public transport</p>
       <ul>
-        <li><i class="tree"></i> Ilmala Station</li>
-        <li><i class="tree"></i> Sörnäinen Metro Station</li>
-        <li><i class="tree"></i> Hakaniemi Metro Station</li>
+        <li><i class="tree"></i> Ilmala Station--390m</li>
+        <li><i class="tree"></i> Sörnäinen Metro Station--600m</li>
+        <li><i class="tree"></i> Hakaniemi Metro Station--1km</li>
       </ul>
     </section>
   </div>
