--- a/public/assets/CSS/destiny.css
+++ b/public/assets/CSS/destiny.css
@@ -1,13 +1,14 @@
 .buttoneS:hover {
   font-style: italic;
-  color: blue;
+  color: rgb(109, 4, 4);
   font-weight: 900;
+  background-image: linear-gradient(rgb(72, 40, 216), rgba(63, 95, 201, 0.603));
 }
 
 .buttoneS {
+  background-image: linear-gradient(rgb(128, 198, 238), rgb(113, 136, 243));
   width: 140px;
   height: 40px;
-  background-image: linear-gradient(rgb(128, 198, 238), rgb(113, 136, 243));
   border: none;
   border-radius: 50px;
   color: rgb(255, 255, 255);
@@ -19,8 +20,6 @@
   cursor: pointer;
   box-shadow: 1px 3px 0px rgb(85, 58, 206);
   transition-duration: .3s;
-  list-style: none;
-  text-decoration: none;
 }
 
 .cartIcon {
@@ -29,7 +28,7 @@
 }
 
 .cartIcon path {
-  fill: white;
+  fill: rgb(247, 247, 250);
 }
 
 .buttoneS:active {
