--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,41 +1,50 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}     
-        <link rel="stylesheet" href="assets/CSS/bootstrap.min.css">
-        <link rel="stylesheet" href="assets/CSS/homepage.css">
-        <link rel="stylesheet" href="assets/CSS/navbar.css">
-        <link rel="stylesheet" href="assets/CSS/footer.css">
-        <link rel="stylesheet" href="assets/CSS/order.css">
-        <link rel="stylesheet" href="assets/CSS/adminDashboard.css">
-        <link rel="stylesheet" href="assets/CSS/help.css">
-        <link rel="stylesheet" href="assets/CSS/activities.css">
-        <link rel="stylesheet" href="assets/CSS/rgpd.css">
-        <link rel="stylesheet" href="assets/CSS/payment.css">
-        <link rel="stylesheet" href="assets/CSS/notice.css">
-        <link rel="stylesheet" href="assets/CSS/request.css">
-        <link rel="stylesheet" href="assets/CSS/register.css">
-        <link rel="stylesheet" href="assets/CSS/destiny.css">
-        <link rel="stylesheet" href="assets/CSS/hotel.css">
-        {% endblock %}
-
-        {% block javascripts %}
-            <script src="assets/JS/bootstrap.min.js"></script>
-            <script src="https://kit.fontawesome.com/fc2b28fd60.js" crossorigin="anonymous"></script>
-            <script src="assets/JS/stars.js"></script>
-            <script src="assets/JS/hotelS.js"></script>
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
-
-        {% include "navbar/navbar.html.twig" %}
-        {% block body %}
-        {% endblock %}
+  <head>
+    <meta charset="UTF-8" />
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>"
+    />
+    {% block stylesheets %}
+    
+    <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}" />
+    <link rel="stylesheet" href="{{ asset('assets/css/homepage.css') }}" />
+    <link rel="stylesheet" href="{{ asset('assets/css/navbar.css') }}" />
+    <link rel="stylesheet" href="{{ asset('assets/css/footer.css') }}" />
+    <link rel="stylesheet" href="{{ asset('assets/css/order.css') }}" />
+    <link rel="stylesheet" href="{{ asset('assets/css/adminDashboard.css') }}" />
+    <link rel="stylesheet" href="{{ asset('assets/css/help.css') }}" />
+    <link rel="stylesheet" href="{{ asset('assets/css/activities.css') }}" />
+    <link rel="stylesheet" href="{{ asset('assets/css/rgpd.css') }}" />
+    <link rel="stylesheet" href="{{ asset('assets/css/payment.css') }}" />
+    <link rel="stylesheet" href="{{ asset('assets/css/notice.css') }}" />
+    <link rel="stylesheet" href="{{ asset('assets/css/request.css') }}" />
+    <link rel="stylesheet" href="{{ asset('assets/css/register.css') }}" />
+    <link rel="stylesheet" href="{{ asset('assets/css/destiny.css') }}" />
+    <link rel="stylesheet" href="{{ asset('assets/css/hotel.css') }}" />
+    {% endblock %}
+    {% block javascripts %}
+      <script src="{{ asset('assets/JS/bootstrap.min.js') }}"></script>
+      <script
+        src="https://kit.fontawesome.com/fc2b28fd60.js"
+        crossorigin="anonymous"
+      ></script>
+      <script src="{{ asset('assets/JS/stars.js') }}"></script>
+      <script src="{{ asset('assets/JS/hotelS.js') }}"></script>
+      {% block importmap %}{{ importmap("app") }}{% endblock %}
+    {% endblock %}
+  </head>
+  <body>
+    {% include "navbar/navbar.html.twig" %}
+    
+    {% block body %} {% endblock %}
+    
+    {# Footer inclusion condition #}
+    {% if not app.request.attributes.get('_route') in ['app_activities', 'app_activity_new', 'app_activity_edit'] %}
         {% include "footer/footer.html.twig" %}
-
-    </body>
+    {% endif %}
+    
+  </body>
 </html>
